Fix card size on mobile phones

--- a/client/src/components/styles/app.scss
+++ b/client/src/components/styles/app.scss
@@ -44,3 +44,9 @@ body {
 .input-field .prefix.active {
   color: black;
 }
+
+@media only screen and (max-width: 600px) {
+  .card {
+    height: 100% !important;
+  }
+}
